--- a/src/css/DefineUser.css
+++ b/src/css/DefineUser.css
@@ -9,10 +9,17 @@ defineUserContainer {
 
 p {
     font-family: 'Roboto', sans-serif;
-    font-size: 20px;
-    font-family: Roboto;
     font-weight: 500;
     font-size: 20px;
     line-height: 25px;
     text-align: center;
+}
+
+Button {
+    border-radius: 15px !important;
+}
+Button:hover {
+    background-color: grey !important;
+    color: white !important;
+    transition: background-color 0.6s ease !important;
 }
