--- a/src/css/Organization.css
+++ b/src/css/Organization.css
@@ -1,9 +1,16 @@
+
 p {
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
     font-size: 20px;
     line-height: 25px;
-    text-align: center;
+}
+
+h2 {
+    text-align: left;
+    color: #4D4A4A;
+    margin-left: 2em;
+    font-size: 35px;
 }
 
 Button {
